fixed album art being misaligned

--- a/src/components/Album/styles.scss
+++ b/src/components/Album/styles.scss
@@ -7,16 +7,21 @@
     "title"
     "artist"
     "songs";
-  grid-template-rows: 1fr auto auto auto;
+  grid-template-rows: auto auto auto 1fr;
   font-size: 0.9em;
   grid-row-gap: 3px;
 
   .art {
     width: 100%;
-    height: auto;
+    // height: auto;
     margin-bottom: 4px;
     border-radius: 6px;
     align-self: center;
+
+    height: 0;
+    padding-top: 100%;
+    background-position: center;
+    background-size: cover;
   }
 
   .title {
